--- a/dvc.yaml
+++ b/dvc.yaml
@@ -16,7 +16,7 @@ stages:
       - data/processed
       - scripts/train.py
     outs:
-      - models/model.pkl # O la ruta completa a tu archivo de modelo
+      - models/model.pkl
 
   evaluate:
     desc: "Evalúa el modelo y genera métricas de rendimiento"
@@ -28,3 +28,13 @@ stages:
     metrics:
       - results/metrics.json:
           cache: false
+
+  predict:
+    desc: "Genera predicciones sobre nuevos datos usando el modelo entrenado"
+    cmd: python scripts/predict.py --model models/model.pkl --input data/inference --output results/predictions.csv
+    deps:
+      - models/model.pkl
+      - data/inference
+      - scripts/predict.py
+    outs:
+      - results/predictions.csv
