--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ pyarrow
 jupyterlab==4.2.1
 matplotlib==3.9.0
 seaborn==0.13.2
-
+mlflow==3.3.2
 # -----------------------------------------------------------------------------
 # Optional: Code formatting and linting (Good practice for teams)
 # -----------------------------------------------------------------------------
