--- a/requirements.txt
+++ b/requirements.txt
@@ -4,22 +4,13 @@
 pandas==2.2.2
 numpy==1.26.4
 scikit-learn==1.5.0
+polars==1.33.0
 
 # -----------------------------------------------------------------------------
-# Machine Learning Framework
-# Se propone TensorFlow para el modelo LSTM. Si se usa otro, reemplazar.
+# Machine Learning Frameworks
 # -----------------------------------------------------------------------------
 tensorflow==2.16.1
-
-# -----------------------------------------------------------------------------
-# MLOps and Experiment Tracking
-# -----------------------------------------------------------------------------
-# DVC para el versionamiento de datos y pipelines.
-# Elige el soporte para tu almacenamiento remoto, ej: [s3], [gdrive], [azure], [ssh]
-# Ejemplo con S3: dvc[s3]==3.52.0
-dvc_s3
-boto3
-pyarrow
+torch==2.8.0
 
 # -----------------------------------------------------------------------------
 # For notebooks and experimentation
@@ -28,6 +19,21 @@ jupyterlab==4.2.1
 matplotlib==3.9.0
 seaborn==0.13.2
 mlflow==3.3.2
+
+# -----------------------------------------------------------------------------
+# MLOps and Experiment Tracking
+# -----------------------------------------------------------------------------
+dvc==3.52.0
+dvc-s3==3.2.2
+boto3==1.40.18
+
+# -----------------------------------------------------------------------------
+# Additional useful packages (from your pip freeze)
+# -----------------------------------------------------------------------------
+pyarrow==21.0.0
+joblib==1.5.2
+scipy==1.16.1
+
 # -----------------------------------------------------------------------------
 # Optional: Code formatting and linting (Good practice for teams)
 # -----------------------------------------------------------------------------
