Tracking data folder structure without content in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,12 @@ __pycache__/
 # Directorios de datos
 # Esta simple regla ignora la carpeta 'data' completa y todo su contenido.
 # Es la forma más robusta y simple de hacerlo.
-/data/
+#/data/
 
 # Si por alguna razón SÍ quieres versionar la estructura de la carpeta
 # pero no su contenido, puedes usar estas reglas en su lugar:
-# data/*
-# !data/.gitkeep
+data/*
+!data/.gitkeep
 
 # Archivos de Notebooks
 .ipynb_checkpoints
