Adding S3 as remote and pushing data

--- a/.dvc/config
+++ b/.dvc/config
@@ -1,6 +1,8 @@
 [core]
-    remote = myremote
+    remote = s3remote
 ['remote "sepsis2019"']
     url = s3://physionet-sepsis-forecasting/sepsis2019
 ['remote "myremote"']
     url = s3://sepsis-prediction-project-data-rich-coding
+['remote "s3remote"']
+    url = s3://sepsis-prediction-project-data-rich-coding/dvc/
