--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,8 @@
 # Core libraries for data manipulation, numerical operations, and ML
 # -----------------------------------------------------------------------------
 pandas==2.2.2
-numpy==1.26.4
-scikit-learn==1.5.0
-polars==1.33.0
-
-# -----------------------------------------------------------------------------
-# Machine Learning Frameworks
-# -----------------------------------------------------------------------------
-tensorflow==2.16.1
-torch==2.8.0
+numpy==2.1.1
+scikit-learn==1.5.2
 
 # -----------------------------------------------------------------------------
 # For notebooks and experimentation
@@ -33,9 +26,16 @@ boto3==1.40.18
 pyarrow==21.0.0
 joblib==1.5.2
 scipy==1.16.1
+fastapi==0.114.1
+uvicorn[standard]==0.30.6
+pydantic==2.9.2
 
 # -----------------------------------------------------------------------------
 # Optional: Code formatting and linting (Good practice for teams)
 # -----------------------------------------------------------------------------
 # black==24.4.2
 # ruff==0.4.8
+
+
+
+
