Added tox.ini file and solve test in api file

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,12 +16,12 @@ mlflow==3.3.2
 # -----------------------------------------------------------------------------
 # MLOps and Experiment Tracking
 # -----------------------------------------------------------------------------
-dvc==3.52.0
+dvc==3.63.0
 dvc-s3==3.2.2
 boto3==1.40.18
 
 # -----------------------------------------------------------------------------
-# Additional useful packages (from your pip freeze)
+# Additional useful packages
 # -----------------------------------------------------------------------------
 pyarrow==21.0.0
 joblib==1.5.2
@@ -29,6 +29,11 @@ scipy==1.16.1
 fastapi==0.114.1
 uvicorn[standard]==0.30.6
 pydantic==2.9.2
+
+# -----------------------------------------------------------------------------
+# Testing / tooling
+# -----------------------------------------------------------------------------
+tox>=4,<5
 
 # -----------------------------------------------------------------------------
 # Optional: Code formatting and linting (Good practice for teams)
