Solve issues with mypy command for tox checks

--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,7 @@ commands=
 [testenv:checks]
 envdir = {toxworkdir}/checks
 deps =
+	-r{toxinidir}/requirements.txt
 	-r{toxinidir}/typing_requirements.txt
 commands =
 	flake8 app
