Include features folder and new .parquet control version with DVC reset remote configurations and solve .gitignore to prevent errors with .dvc files

--- a/.dvc/config
+++ b/.dvc/config
@@ -1,8 +1,4 @@
 [core]
-    remote = s3remote
-['remote "sepsis2019"']
+    remote = aws-remote
+['remote "aws-remote"']
     url = s3://physionet-sepsis-forecasting/sepsis2019
-['remote "myremote"']
-    url = s3://sepsis-prediction-project-data-rich-coding
-['remote "s3remote"']
-    url = s3://sepsis-prediction-project-data-rich-coding/dvc/
