--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ scipy==1.16.1
 fastapi==0.114.1
 uvicorn[standard]==0.30.6
 pydantic==2.9.2
+tqdm==4.67.1
 
 # -----------------------------------------------------------------------------
 # Testing / tooling
