--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ mlruns
 # Archivos generados por el sistema operativo
 .DS_Store
 Thumbs.db
+
+#Terraform
+.terraform/
+**/.terraform/*
+*.tfstate
+*.tfstate.*
